--- a/kafka-cart-stock-service.yml
+++ b/kafka-cart-stock-service.yml
@@ -1,20 +1,37 @@
-spring.application.name=kafka-cart-stock-service
+spring:
+  application:
+    name: kafka-cart-stock-service
+  server:
+    port: 8081
 
-server.port=8081
-spring.kafka.consumer.bootstrap-servers: localhost:9092
-spring.kafka.consumer.group-id: stock
-spring.kafka.consumer.auto-offset-reset: earliest
-spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      group-id: stock
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "*"
+    topic:
+      name: order_topics
 
-spring.kafka.topic.name=order_topics
-spring.datasource.url=jdbc:postgresql://localhost:5432/kafkadb
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name= org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.show-sql= false
-spring.jpa.properties.hibernate.format_sql= true
-spring.jpa.database= postgresql
-spring.jpa.database-platform= org.hibernate.dialect.PostgreSQLDialect
+  datasource:
+    url: jdbc:postgresql://localhost:5432/kafkadb
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
